cache/kubernetes/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: cache-system
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: myworkspace
    app.kubernetes.io/component: cache
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: nginx
