cache/kubernetes/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: cache-system
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: myworkspace
    app.kubernetes.io/component: cache
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-cache: "on"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - myworkspace.myenum.in
      secretName: nginx-ssl
  rules:
    - host: myworkspace.myenum.in
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
